Add Admin Login endpoint with default admin credentials and role-based access control